# tRNAs-in-space

./: .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_GUIDELINES.md  ASSESSMENT_AND_REMEDIATION_REPORT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COORDINATE_SYSTEM_SCOPE.md  COORDINATE_SYSTEM_SUCCESS_REPORT.md  COORDINATE_SYSTEM_VALIDATION.md  FAQ.md  GLOBAL_COORDINATE_CAPABILITIES.md  LICENSE  Makefile  OUTPUT_FORMAT.md  PR_DESCRIPTION.md  PR_SUMMARY.md  QUICK_WINS_SUMMARY.md  README.md  RECOMMENDATIONS.md  REGENERATION_INSTRUCTIONS.md  REPOSITORY_STRUCTURE.md  TRNAS_IN_SPACE_COORDINATE_FIX_BRIEFING.md  build.sh  pyproject.toml  requirements.txt  test_trnas_in_space.py
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  ci.yml  tests.yml  validation.yml
config/: modomics.yaml  organisms.yaml
docs/: BIOLOGICAL_VALIDATION.md  COORDINATE_SYSTEM.md  DOWNLOAD_GUIDE.md  EXCLUDED_TRNAS.md  FAQ.md  OUTPUT_FORMAT.md
docs/archive/: COMPLETED_2025-11-25_offset-type-coordinate-groups.md  DEPRECATED_offset-type-grouping.md  R2DT_LABEL_INDEX_MISMATCH_BUG.md  README.md  SESSION_HANDOFF_ARG_CCU_BUG.md
docs/archive/completed-prs/: PHASE2_SUMMARY.md
docs/archive/coordinate-fixes/: COORDINATE_FIX_VALIDATION_REPORT.md  COORDINATE_SYSTEM_SUCCESS_REPORT.md
docs/archive/modomics-integration/: MODOMICS_INTEGRATION.md  modified_tRNA_all_all_rna_sequences.fasta  sacCer_mito_modified.fasta  sacCer_mito_unmodified.fasta
docs/archive/planning/: NEXT_SESSION_START.md  REMAINING_PLAN.md
docs/development/: MODOMICS_INTEGRATION.md  unmodified_tRNA_all_all_rna_sequences.fasta
docs/intermediates/: ecoliK12_alignment_inspection.tsv
examples/: 01_basic_visualization.ipynb
fastas/: anoCar2-mature-tRNAs.fa  baciSubt2-mature-tRNAs.fa  bosTau9-mature-tRNAs.fa  candAlbi_WO_1-mature-tRNAs.fa  ce11-mature-tRNAs.fa  danRer11-mature-tRNAs.fa  haloVolc1-mature-tRNAs.fa  komaPast_GS115-mature-tRNAs.fa  methBark1-mature-tRNAs.fa  mm39-mature-tRNAs.fa  panTro6-mature-tRNAs.fa  pseuAeru-mature-tRNAs.fa  rn7-mature-tRNAs.fa  schiPomb_972H-mature-tRNAs.fa  xenTro9-mature-tRNAs.fa
outputs/: METADATA.json  README.md  ecoliK12_global_coords.tsv  ecoliK12_global_coords_fixed.tsv  ecoliK12_global_coords_offset+1_type1.tsv  ecoliK12_global_coords_offset-1_type1.tsv  ecoliK12_global_coords_offset-1_type2.tsv  ecoliK12_global_coords_offset0_type1.tsv  ecoliK12_global_coords_offset0_type2.tsv  ecoli_tRNAs_continuous.tsv  ecoli_tRNAs_sprinzl.tsv  hg38_global_coords.tsv  hg38_global_coords_offset+1_type1.tsv  hg38_global_coords_offset+1_type2.tsv  hg38_global_coords_offset-1_type1.tsv  hg38_global_coords_offset-1_type2.tsv  hg38_global_coords_offset-3_type2.tsv  hg38_global_coords_offset0_type1.tsv  hg38_global_coords_offset0_type2.tsv  hg38_global_coords_old.tsv  hg38_mito_global_coords.tsv  sacCer_global_coords.tsv  sacCer_global_coords_offset+1_type1.tsv  sacCer_global_coords_offset-1_type2.tsv  sacCer_global_coords_offset0_type1.tsv  sacCer_global_coords_offset0_type2.tsv  sacCer_global_coords_old.tsv  sacCer_mito_global_coords.tsv
outputs/modomics/: ecoli_modomics_to_sprinzl.tsv  hg38_modomics_to_sprinzl.tsv  modomics_modifications.json  modomics_to_sprinzl_mapping.tsv  sacCer_mito_trnas.json  sacCer_modomics_to_sprinzl.tsv
scripts/: __init__.py  download_gtrnadb_fastas.py  fix_e_position_global_index.py  generate_alignment_inspection.py  investigate_3prime_variation.py  make_sprinzl_continuous.py  process_organisms.py  r2dt_collect_sprinzl.py  regenerate_coords.sh  trnas_in_space.py  validate_annotation_quality.py  validate_coordinate_system.py  visualize_alignment_system.py
scripts/modomics/: README.md  __init__.py  add_global_coords.py  align_to_sprinzl.py  modification_codes.py  parse_modomics.py  scrape_mito_trnas.py
